  IMPORTANT: Apply update/database/5.0/dbupdate-5.0.0-to-5.0.1.sql to fix 
  inconsistency in database (if you have used ezoe prior to version 5.0.1)
* Updated Tango icons to v0.8.90
* Added support for IsInline[<tag>]=image setting for custom tags with no content (or actual images)
* Allow siteaccess to override ezoe.ini SkinVariant setting
* Fixed #14728: Space between links are removed

5.0.0
* Fixed regression #13650: [header] ezoe adds a level each time it is called
* Added note on unsupported TinyMCE buttons/ extensions in FAQ + ezoe.ini
* Fixed bug #014375: pagebreak not stored if added with button w/ patch from Georg Franz
* Support for new handler code in eZ Publish 4.1
* Updated tinyMCE to 3.2.2
* Renamed ezoe_customattributes.ini to ezoe_attributes.ini since it is also used for attributes since rc9
* Enable inline table controls in gecko (table_inline_editing tinyMCE setting)
* Fixed #014284: Needed translation improvements for oe5

5.0rc12
* Fixed bug #14260: content.ini.[paragraph].AllowEmpty=false is ignored
* Content type not translated in upload dialog caused by not stripping ending 's'
* Partly fixed #014284: Needed translation improvements for oe5
* Added customizable xml tag name alias list in ezoe.ini, used in status bars and dialogs
* Make htmlsize attribute type properly regonize px sizes from existing tag.
* Fixed bug #14333: fatal error at edit page
* Made input parser ignore junk links from word 2007
* Fixed bug #14359: Edit <link> tag popup is empty with JS error in pupup_utils.js
* Fixed bug #14397: Switched XmlTagNameAlias of th (table header) and td (table cell)
* Fixed bug #14317: wordmatch.ini used in kernel but only bundled with OE
* Fixed bug #14364: Nested levels in IE

5.0rc11
* Fixed regression #014110: IE7 double every paragraph break on every edit
* Use sort_array from root node in Location drop down + use name as 2. sort rule
* Add support for role limitations (SubTree & Section) on ezoe module and it's functions