@@ -17,6 +17,7 @@ eZ Online Editor 5.0 extension Changelog
 * Added support for IsInline[<tag>]=image setting for custom tags with no content (or actual images)
 * Allow siteaccess to override ezoe.ini SkinVariant setting
 * Fixed #14728: Space between links are removed
+* Fixed: extra empty paragraphs generated when inserting embed object and literal tags 
 
 5.0.0
 * Fixed regression #13650: [header] ezoe adds a level each time it is called
